# bevy_cef

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  basic-concepts.html  build.rs  core-components.html  index.html  installation.html  print.html  quick-start.html  searcher-c2a407aa.js  searchindex-3c34a297.js  searchindex.js  toc-7dcef2d7.js  toc.html  toc.js
.claude/: settings.json
.claude/commands/: create-test.md
.github/: pull_request_template.md
.github/codex/prompts/: review.md
.github/workflows/: ci.yml  codex-pr-review.yml  deploy-docs.yml  publish.yml
assets/: brp.html  extensions.html  hidpi_demo.html  host_emit.html  js_emit.html  resize_demo.html  toolbar_drag.html
assets/shaders/: custom_material.wgsl  headless_texture.wgsl
crates/bevy_cef_bundle_app/: Cargo.toml
crates/bevy_cef_bundle_app/src/: main.rs
crates/bevy_cef_core/: Cargo.toml  build.rs
crates/bevy_cef_core/src/: browser_process.rs  custom_scheme.rs  debug.rs  lib.rs  macros.rs  render_process.rs  util.rs
crates/bevy_cef_core/src/browser_process/: app.rs  browser_process_handler.rs  browsers.rs  cef_command.rs  cef_thread.rs  client_handler.rs  command_line_config.rs  display_handler.rs  drag_handler.rs  load_handler.rs  message_pump.rs  renderer_handler.rs
crates/bevy_cef_core/src/browser_process/accelerated_paint/: iosurface.rs  mod.rs
crates/bevy_cef_core/src/browser_process/browsers/: keyboard.rs
crates/bevy_cef_core/src/browser_process/localhost/: data_responser.rs  headers_responser.rs
crates/bevy_cef_core/src/render_process/: app.rs  brp.rs  cef_api_handler.rs  emit.rs  listen.rs  render_process_handler.rs
crates/bevy_cef_debug_render_process/: Cargo.toml  README.md
crates/bevy_cef_debug_render_process/src/: main.rs
crates/bevy_cef_render_process/: Cargo.toml
crates/bevy_cef_render_process/src/: main.rs
docs/: book.toml
docs/brainstorms/: windows-support-mvp.md
docs/plans/: 2026-02-23-codex-pr-review-design.md  2026-02-23-codex-pr-review.md  2026-03-04-publish-release-workflow-design.md  2026-03-04-publish-release-workflow.md
docs/src/: README.md  SUMMARY.md  basic-concepts.md  core-components.md  installation.md  quick-start.md
docs/superpowers/plans/: 2026-03-31-cef-diagnostics.md  2026-03-31-pr-template.md  2026-04-12-webview-resize-handler.md  2026-04-13-webview-hidpi-support.md  2026-05-28-macos-terminate-swizzle.md  2026-06-21-cef-security-hardening.md
docs/superpowers/specs/: 2026-03-31-cef-diagnostics-design.md  2026-03-31-pr-template-design.md  2026-04-12-webview-resize-handler-design.md  2026-04-13-webview-hidpi-support-design.md  2026-05-28-macos-terminate-swizzle-design.md  2026-06-21-cef-security-hardening-design.md
docs/website/docs/: concepts.md  installation.md
docs/website/docs/getting-started/: your-first-webview.md
docs/website/docs/guides/: sprite-rendering.md
docs/website/docs/reference/: plugin-configuration.md  version-compatibility.md
examples/: brp.rs  custom_material.rs  custom_scheme.rs  devtool.rs  diagnostics.rs  extensions.rs  headless_texture.rs  hidpi.rs  host_emit.rs  initialize_scripts.rs  inline_html.rs  js_emit.rs  navigation.rs  preload_scripts.rs  resize.rs  simple.rs  sprite.rs  toolbar_drag.rs  ui_webview.rs  zoom_level.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
src/: common.rs  cursor_icon.rs  diagnostics.rs  drag.rs  focus.rs  keyboard.rs  lib.rs  mute.rs  navigation.rs  resize.rs  title.rs  webview.rs  zoom.rs
src/common/: components.rs  dpi.rs  message_loop.rs  sandbox.rs
src/common/ipc/: host_emit.rs  js_emit.rs
src/common/localhost/: asset_loader.rs  responser.rs
src/resize/: components.rs  cursor.rs  mod.rs  pipeline.rs  plugin.rs
src/system_param/: mesh_aabb.rs  pointer.rs
src/webview/: alpha.rs  gpu_surface.rs  mesh.rs  texture_target.rs  ui.rs  webview_sprite.rs
src/webview/mesh/: webview_extend_material.rs  webview_extend_standard_material.rs  webview_material.rs  webview_util.wgsl
src/webview/ui/: input.rs  material.rs  webview_ui.wgsl
website/: docusaurus.config.ts
