[package]
name = "bevy_cef"
description = "Bevy CEF integration for web rendering"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["assets/"]

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.12.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["notelm"]
repository = "https://github.com/not-elm/bevy_cef"
readme = "README.md"
keywords = ["bevy", "cef", "web", "rendering"]
categories = ["game-development", "web-programming", "graphics"]

[workspace.lints.rust]
# `objc`'s `sel_impl!` macro (expanded inside `msg_send!`) emits
# `#[cfg(not(feature = "cargo-clippy"))]`, which the `unexpected_cfgs` lint flags
# because no crate defines a `cargo-clippy` feature. Declaring it as a known
# check-cfg value silences that false positive without disabling the lint.
# Member crates opt in with `lints.workspace = true`.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
] }

[workspace.dependencies]
# Bare minimum. Each member crate enables exactly the bevy features it uses.
# The render-process binaries only need `bevy::platform` (always available).
# The browser-side library and top-level crate light up renderer features.
bevy = { version = "0.19", default-features = false }
bevy_remote = "0.19"
cef = { version = "149.3.0+149.0.6" }
cef-dll-sys = { version = "149.3.0+149.0.6", features = ["sandbox"] }
bevy_cef = { path = ".", version = "0.12.0" }
bevy_cef_core = { path = "crates/bevy_cef_core", version = "0.12.0", default-features = false }
async-channel = { version = "2.5" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
raw-window-handle = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
plist = "1"

[dependencies]
bevy = { workspace = true, features = ["bevy_winit", "bevy_ui_render"] }
bevy_remote = { workspace = true }
cef = { workspace = true }
bevy_cef_core = { workspace = true, features = ["browser"] }
async-channel = { version = "2.5" }
serde = { workspace = true }
serde_json = { workspace = true }
raw-window-handle = "0.6"

[dev-dependencies]
bevy = { workspace = true, default-features = true, features = [
    "file_watcher",
] }
bevy_cef = { path = ".", features = ["debug"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2" }

# On Linux, `bevy_winit` needs a windowing backend selected explicitly because
# Bevy's default features (which would pull in `x11`) are disabled workspace-wide.
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { workspace = true, features = ["x11", "wayland"] }

[lints]
workspace = true

[features]
default = []
serialize = ["bevy/serialize"]
debug = ["bevy_cef_core/debug", "log"]
log = ["bevy_cef_core/log"]
