[package]
name = "bevy_cef_bundle_app"
description = "CLI tool to bundle CEF framework into macOS .app bundles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
plist = { workspace = true }
