[package]
name = "bevy_cef_debug_render_process"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cef = { workspace = true }
bevy_cef_core = { workspace = true }