[package]
name = "bevy_cef_debug_render_process"
description = "Debug render process for bevy_cef"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cef = { workspace = true }
bevy_cef_core = { workspace = true }
cef-dll-sys = { workspace = true }
