[package]
name = "bevy_cef_render_process"
description = "render process for bevy_cef"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cef = { workspace = true }
# Workspace declares `bevy_cef_core` with default-features = false, so this
# binary only pulls bare `bevy::platform` (needed by the shared render_process
# module). No bevy_winit, no renderer, no x11/wayland.
bevy_cef_core = { workspace = true }
cef-dll-sys = { workspace = true }

