[package]
name = "demo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
bevy = { workspace = true, default-features = true, features = ["file_watcher"]}
bevy_cef = { workspace = true, features = ["debug"] }

